# pdforbit

./: .gitignore  AI_ASSISTANCE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  .railwayignore  Dockerfile  Procfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/core/: __init__.py  config.py  container.py  logging.py  middleware.py  rate_limit.py  request_context.py  security.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/models/: __init__.py  artifact.py  billing_payment.py  enums.py  job.py  job_event.py  job_input.py  refresh_token.py  upload.py  user.py
backend/app/schemas/: __init__.py  auth.py  billing.py  editor_operations_schema.py  health.py  history.py  job.py  upload.py  user.py
backend/app/services/: __init__.py  auth_service.py  billing_service.py  cleanup_service.py  credit_service.py  download_service.py  history_service.py  job_execution_service.py  job_service.py  queue_service.py  storage_service.py  system_service.py  translation_service.py  upload_service.py  user_service.py
backend/app/utils/: __init__.py  files.py  ids.py  libreoffice.py  pdf_validation.py  subprocesses.py
backend/app/workers/: __init__.py  cleanup.py  progress.py  railway_runner.py  rq_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_billing_system.py  test_credit_system.py  test_downloads.py  test_editor_jobs.py  test_health.py  test_jobs.py  (+8 more)
(+181 files in other folders)
